<resources>
    <string name="app_name">Calculator</string>
    <string name="_0">0</string>
    <string name="add">+</string>
    <string name="Equal">=</string>
    <string name="Zero">0</string>
    <string name="clear">C</string>
    <string name="Sub">-</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="mul">x</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="divide">/</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
</resources>