<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#DDDDDD"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:text="@string/_0"
        android:textSize="45sp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn9"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btndevide"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn6"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnmultiple"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/One"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Two"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:text="@string/Three"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btnsubstract"
            android:layout_weight="1"
            android:text="@string/Sub"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:id="@+id/btnclear"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn0"
            android:text="@string/Zero"
            android:layout_weight="1"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Equal"
            android:id="@+id/btnequal"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:id="@+id/btnadd"
            android:textSize="35sp"
            android:backgroundTint="#808080"/>

    </LinearLayout>

</LinearLayout>